--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,5 @@
 /* Styles pour le corps de la page */
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -14,7 +13,6 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-
 #logo img {
     max-width: 100%;
 }
@@ -37,28 +35,112 @@ nav a {
 
 /* Styles pour la section intro */
 #intro {
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     padding: 50px;
 }
 
-#intro h1 {
+#intro h1 { 
     font-size: 2em;
 }
 
-/* Styles pour la section services */
+/* Styles for the section services */
 #services {
-    background-color: #fff;
+    background-image: url("/Images/fondgamer.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: Arial, sans-serif;
+    min-height: 100vh;
+    display: grid;
+    grid-template-areas:
+    "header header header"
+    "service1 service2 service3"
+    "service4 service5 service6";
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 1fr;
+    grid-gap: 50px;
+    align-items: center;
     padding: 50px;
-}
-
-.service {
+    }
+    
+    #services h2 {
+    grid-area: header;
+    text-align: left;
+    margin-top: 10px;
     margin-bottom: 50px;
-}
-
-.service h3 {
-    font-size: 1.5em;
-}
-
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    font-size: 2.5em;
+    }
+    
+    .service {
+    display: grid;
+    grid-template-areas:
+    "title title"
+    "description image";
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto auto;
+    background-color: transparent;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 60px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    }
+    
+    .service h3 {
+    grid-area: title;
+    text-align: right;
+    margin-top: 30px;
+    font-size: 2em;
+    font-weight: bold;
+    color: #d60000;
+    text-decoration: underline;
+    }
+    
+    .service p {
+    grid-area: description;
+    font-size: 1.2em;
+    line-height: 1.5em;
+    text-align: left;
+    color: #555;
+    }
+    
+    .service img {
+    grid-area: image;
+    }
+  
+  /* Increase spacing between the columns */
+  #services {
+    grid-gap: 70px;
+  }
+  
+  /* Adjust elements for smaller screens */
+  @media screen and (max-width: 767px) {
+    #services {
+      align-items: stretch;
+      padding: 50px 20px;
+    }
+  
+    .service {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto auto;
+      padding: 50px 30px;
+      margin-top: 50px;
+      margin-bottom: 0;
+    }
+  
+    .service h3 {
+      grid-column: 1 / -1;
+      grid-row: 2 / 3;
+      margin-top: 0;
+      text-align: center;
+    }
+  }
+  
+  
 /* Styles pour le footer */
 footer {
     background-color: #333;
