--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,28 +27,70 @@ header {
 #logo img {
   max-width: 100%;
   display: block;
+  float: right;
 }
-  
+
 nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: right;
+  text-align: center;
 }
-  
+
 nav li {
   display: inline-block;
-  margin: 0 10px;
+  margin: 10px;
+  position: relative;
+  border: 0.1px solide black;
+  border-radius: 10px;
 }
-  
+
 nav a {
-  color: #fff;
+  font-family: Arial, sans-serif;
+  color: #ff0000;
   text-decoration: none;
+  letter-spacing: 3px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 150px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-sizing: border-box;
+}
+
+
+.button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: rgba(0, 0, 0, 0.7);
+  transition: all 0.3s ease;
+  z-index: -1;
+}
+
+nav a:hover .button {
+  opacity: 0.5;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+nav a:hover {
+  background-color: rgba(223, 0, 0, 0.7);
+  color: rgba(255, 255, 255, 1);
+  text-decoration: underline;
 }
 
 /* Styles pour la section intro */
 #intro {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
   font-family: Arial, sans-serif;
   padding: 50px;
   margin-top: 110px;
@@ -148,22 +190,24 @@ section.active {
   font-family: Arial, sans-serif;
   min-height: 100vh;
   padding: 50px;
-}
- 
-#services > div {
-  text-align: center;
-}
+  box-sizing: border-box;
+  height: auto;
+  }
   
-#services > div > h2 {
+  #services > div {
+  text-align: center;
+  }
+  
+  #services > div > h2 {
   text-decoration: underline;
   text-align: center;
   margin-top: 0;
   font-size: 2rem;
   font-weight: bold;
   color: #d60000;
-}
+  }
   
-.service {
+  .service {
   background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 2px 2px 4px rgba(255, 255, 255, 1);
   padding: 40px 60px;
@@ -173,9 +217,9 @@ section.active {
   font-size: 1.2rem;
   line-height: 1.5rem;
   text-align: justify;
-}
+  }
   
-.service h3 {
+  .service h3 {
   margin-top: 30px;
   font-size: 1.5rem;
   font-weight: bold;
@@ -184,19 +228,19 @@ section.active {
   margin-top: 30px;
   font-weight: bold;
   display: inline-block;
-}
+  }
   
-.service ul {
+  .service ul {
   margin: 0;
   padding: 0;
   list-style: none;
-}
+  }
   
-.service li {
+  .service li {
   margin-bottom: 20px;
-}
+  }
   
-.service p {
+  .service p {
   width: 100%;
   padding: 30px;
   margin-top: 30px;
@@ -205,57 +249,57 @@ section.active {
   line-height: 1.5rem;
   text-align: left;
   color: #ffffff;
-}
-
-.service img {
+  }
+  
+  .service img {
   margin-top: 20px;
   max-width: 100%;
-}
-
-/* Aligner les éléments h2 et h3 sur la même colonne */
-.service h2, .service h3 {
+  }
+  
+  /* Aligner les éléments h2 et h3 sur la même colonne */
+  .service h2, .service h3 {
   margin: 0;
-}
-
-/* Adjust elements for smaller screens */
-@media screen and (max-width: 767px) {
-#services {
+  }
+  
+  /* Ajuster les éléments pour les écrans plus petits */
+  @media screen and (max-width: 767px) {
+  #services {
   padding: 50px 20px;
-}
-
-.service {
+  }
+  
+  .service {
   width: 100%;
   padding: 20px;
   margin: 20px 0;
-}
-}
-
-/* Styles pour le contact */
-#contact {
+  }
+  }
+  
+  /* Styles pour la section contact */
+  #contact {
   height: 100vh;
   color: #ffffff;
   font-family: Arial, sans-serif;
   background-color: rgba(0, 0, 0, 0.6);
   padding: 50px;
-}
+  }
   
-#contact h2 {
+  #contact h2 {
   color: red;
   font-size: 36px;
   text-align: center;
   margin-bottom: 40px;
-}
+  }
   
-#contact form {
+  #contact form {
   max-width: 800px;
   margin: 0 auto;
-}
+  }
   
-#contact label {
+  #contact label {
   display: block;
   font-size: 18px;
   margin-bottom: 10px;
-}
+  }
   
 #contact input,
 #contact textarea {
@@ -275,15 +319,7 @@ section.active {
   color: #000000;
   border: none;
   border-radius: 5px;
-  padding: 10px 20px;
-  font-size: 18px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-#contact input[type='submit']:hover {
-  background-color: #3e8e41;
-  color: #ffffff;
+  padding: 10px;
 }
 
 /* Styles pour le footer */
