--- a/CSS/style.css
+++ b/CSS/style.css
@@ -88,47 +88,6 @@ nav a:hover {
   text-decoration: underline;
 }
 
-/* Styles pour la section intro */
-#intro {
-  background-color: rgba(0, 0, 0, 0.7);
-  font-family: Arial, sans-serif;
-  padding: 50px;
-  margin-top: 110px;
-  margin-bottom: 50px;
-  text-align: center;
-  height: auto;
-}
-
-#intro h1 {
-  font-size: 3rem;
-  color: #ff0000;
-  margin-bottom: 20px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-#intro p {
-  font-size: 1.5rem;
-  color: #ffffff;
-  line-height: 1.5;
-  margin-bottom: 30px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-#intro h2 {
-  font-size: 2rem;
-  color: #fff;
-  margin-bottom: 20px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-#intro h3 {
-  font-size: 1.5rem;
-
-  color: #ff0000;
-  line-height: 1.5;
-  margin-bottom: 30px;
-}
-
 /* Styles pour les sections */
 section {
   height: 100vh;
@@ -230,16 +189,6 @@ section.active {
   display: inline-block;
   }
   
-  .service ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  }
-  
-  .service li {
-  margin-bottom: 20px;
-  }
-  
   .service p {
   width: 100%;
   padding: 30px;
@@ -250,12 +199,49 @@ section.active {
   text-align: left;
   color: #ffffff;
   }
+
+  
+/* style pour la liste de tâches */
+.service ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* style pour les cases à cocher */
+.service li input[type=checkbox] {
+  margin-right: 10px;
+}
+
+/* style pour les étiquettes des cases à cocher */
+.service li label {
+  display: block;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
   
   .service img {
   margin-top: 20px;
   max-width: 100%;
   }
   
+/* style pour cadre-video */
+
+.cadre-video {
+  position: relative;
+  display: block; width: 100%;
+  padding-bottom: 56.25%;
+  margin-top: 20px;
+  }
+  
+  .cadre-video video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  }
+
   /* Aligner les éléments h2 et h3 sur la même colonne */
   .service h2, .service h3 {
   margin: 0;
